--- a/manuscript/preamble.tex
+++ b/manuscript/preamble.tex
@@ -33,10 +33,10 @@
 \renewcommand\Authfont{\fontsize{10.5}{11}\selectfont}
 
 \usepackage{caption}
-\DeclareCaptionLabelSeparator{bar}{\textbf{ | }}
-\captionsetup{
-   labelsep=bar
-}
+% \DeclareCaptionLabelSeparator{bar}{\textbf{ | }}
+% \captionsetup{
+%    labelsep=bar
+% }
 
 % \renewcommand{\rmdefault}{cmr}
 
