--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -253,5 +253,90 @@
 
 
 
+@article{pavlacky2017statistically,
+  title={A statistically rigorous sampling design to integrate avian monitoring and management within Bird Conservation Regions},
+  author={Pavlacky Jr, David C and Lukacs, Paul M and Blakesley, Jennifer A and Skorkowsky, Robert C and Klute, David S and Hahn, Beth A and Dreitz, Victoria J and George, T Luke and Hanni, David J},
+  journal={PloS one},
+  volume={12},
+  number={10},
+  pages={e0185924},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
 
+@article{chandler2009scrub,
+  title={Scrub-shrub bird habitat associations at multiple spatial scales in beaver meadows in massachusetts},
+  author={Chandler, Richard B and King, David I and DeStefano, Stephen},
+  journal={The Auk},
+  volume={126},
+  number={1},
+  pages={186--197},
+  year={2009},
+  publisher={Oxford University Press}
+}
 
+@article{reif2008bird,
+  title={Bird-habitat associations predict population trends in central European forest and farmland birds},
+  author={Reif, Ji{\v{r}}{\'\i} and Storch, David and Vo{\v{r}}{\'\i}{\v{s}}ek, Petr and {\v{S}}t'astn{\`y}, Karel and Bej{\v{c}}ek, Vladim{\'\i}r},
+  journal={Biodiversity and Conservation},
+  volume={17},
+  number={13},
+  pages={3307},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{link2008combining,
+  title={Combining breeding bird survey and Christmas Bird Count data to evaluate seasonal components of population change in northern bobwhite},
+  author={Link, William A and Sauer, John R and Niven, Daniel K},
+  journal={The Journal of Wildlife Management},
+  volume={72},
+  number={1},
+  pages={44--51},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{sauer2011analysis,
+  title={Analysis of the North American breeding bird survey using hierarchical models},
+  author={Sauer, John R and Link, William A},
+  journal={The Auk},
+  volume={128},
+  number={1},
+  pages={87--98},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{jarzyna2017near,
+  title={A near half-century of temporal change in different facets of avian diversity},
+  author={Jarzyna, Marta A and Jetz, Walter},
+  journal={Global Change Biology},
+  volume={23},
+  number={8},
+  pages={2999--3011},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{schipper2016contrasting,
+  title={Contrasting changes in the abundance and diversity of North American bird assemblages from 1971 to 2010},
+  author={Schipper, Aafke M and Belmaker, Jonathan and de Miranda, Murilo Dantas and Navarro, Laetitia M and B{\"o}hning-Gaese, Katrin and Costello, Mark J and Dornelas, Maria and Foppen, Ruud and Hortal, Joaqu{\'\i}n and Huijbregts, Mark AJ and others},
+  journal={Global Change Biology},
+  volume={22},
+  number={12},
+  pages={3948--3959},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{barnett2019plant,
+  title={The plant diversity sampling design for the national ecological observatory network},
+  author={Barnett, David T and Adler, Peter B and Chemel, Benjamin R and Duffy, Paul A and Enquist, Brian J and Grace, James B and Harrison, Susan and Peet, Robert K and Schimel, David S and Stohlgren, Thomas J and others},
+  journal={Ecosphere},
+  volume={10},
+  number={2},
+  pages={e02603},
+  year={2019},
+  publisher={Wiley Online Library}
+}
